k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bukli-app-svc
spec:
  selector:
    app: bukli-app
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
